# ragQdrant

./: README.md  app.py  docker-compose.yml  index_documents.py  pyproject.toml
